--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
 <head>
     <title>sheesh | Graph</title>
-    <script type="6c81a9d122283e01ad4cac54-text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="6c81a9d122283e01ad4cac54-text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="graph.js" type="6c81a9d122283e01ad4cac54-text/javascript"></script>
+    <script type="4e04db631447933ad55e523f-text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="4e04db631447933ad55e523f-text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="graph.js" type="4e04db631447933ad55e523f-text/javascript"></script>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src="https://code.highcharts.com/highcharts.js" type="6c81a9d122283e01ad4cac54-text/javascript"></script>
+    <script src="https://code.highcharts.com/highcharts.js" type="4e04db631447933ad55e523f-text/javascript"></script>
 </head>
 
 <body>
     <div class="box">
-        <script src="https://code.highcharts.com/themes/dark-unica.js" type="6c81a9d122283e01ad4cac54-text/javascript"></script>
+        <script src="https://code.highcharts.com/themes/dark-unica.js" type="4e04db631447933ad55e523f-text/javascript"></script>
         <div id="container">
+
         </div>
+    </div>
+<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e04db631447933ad55e523f-|49" defer=""></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"718aac2b0e199112","version":"2021.12.0","r":1,"token":"adedb850742b49a3a6c7a5335cbcf91d","si":100}' crossorigin="anonymous"></script>
 </body>
 
 </html>
