--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -9,7 +8,7 @@
     <link rel="shortcut icon" href="https://bitmitigate.com/img/favicon.png" type="image/x-icon" />
 
     <meta http-equiv="refresh" content="2" />
-    <title>BitMitigate DDoS Protection</title>
+    <title> Shit DDoS Protection</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://bitmitigate.com/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://bitmitigate.com/css/style.css" />
