--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="error_contain text-center">
 
                 <h2 class="f_p f_400 w_color f_size_40">Loading...</h2>
-                <p class="w_color f_300">We are checking your browser to make sure you aren't a bot or DDoS attack. This process is completely automatic and will only take a moment. Once it is completed you will be forwarded immediately.</p>
+                <p class="w_color f_300">We are checking your browser to fuck your time, fuck off.</p>
                 <a href="https://bitmitigate.com/" class="about_btn btn-success  btn_hover mt_40">DDoS protection by BitMitigate</a>
             </div>
         </div>
